--- a/js/pernilongo.js/views/home/submit_story.html
+++ b/js/pernilongo.js/views/home/submit_story.html
@@ -3,9 +3,9 @@
   <hr/>
   <div class="row">
     <div class="col-lg-6">
-      <h2>Option 1) Google Forms</h2>
+      <h2>Option 1) GitHub Issue</h2>
       <ul>
-        <li>Just fill out <a href="https://docs.google.com/forms/d/1B9OvKdP9vq4MfxOVGyd3Zn8cPniBI9khMBts5Qa0BbI/viewform?usp=send_form">this form</a>.</li>
+        <li>Just <a href="https://github.com/andersonDadario/howihacked/issues">open an issue</a>.</li>
         <li>We will review and add it and modify only if necessary.</li>
         <li>Your name will appear as the story submitter.</li>
         <li>We appreciate your interest to help in advance. Thank you.</li>
